force-app/main/default/objects/Account/fields/Customer_Category1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category1__c</fullName>
    <label>Customer_Category1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>