force-app/main/default/objects/Account/fields/Customer_Category3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category3__c</fullName>
    <label>Customer_Category3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>