force-app/main/default/objects/Account/fields/Customer_Category4__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category4__c</fullName>
    <label>Customer_Category4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>